[project]
name = "map-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "diffusers>=0.32.1",
    "ee>=0.2",
    "einops>=0.8.0",
    "geemap>=0.35.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "lightning[extra]>=2.5.0.post0",
    "pip>=24.3.1",
    "pycrs>=1.0.2",
    "rasterio>=1.4.3",
    "setuptools>=75.6.0",
    "torchmetrics>=1.6.1",
]

[tool.ruff]
line-length = 80
select = ["I"]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]
cu124 = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
